[mod]操作管理程式調整&補上api文件註解
